# apixu-cpp

./: .gitignore  Apixu.cpp  Apixu.h  CMakeLists.txt  Condition.cpp  Condition.h  Current.cpp  Current.h  CurrentCondition.cpp  CurrentCondition.h  CurrentWeather.cpp  CurrentWeather.h  Error.cpp  Error.h  Location.cpp  Location.h  Makefile  README.md  Time.h  main.cpp
Exception/: ApiException.cpp  ApixuException.cpp  FatalErrorException.cpp
HTTP/: Exception.cpp  HTTP.cpp  HTTP.h
Response/: Condition.cpp  Current.cpp  CurrentCondition.cpp  CurrentWeather.cpp  Error.cpp  Location.cpp
dev/: Dockerfile  Dockerfile-build  Dockerfile-proxy  api.py  proxy.py
examples/: CMakeLists.txt  conditions.cpp  current.cpp  forecast.cpp  history.cpp  search.cpp
include/Apixu/: Apixu.h  Apixu.hpp  Time.h  apixu.h  time.h
include/Apixu/Exception/: ApiException.h  ApiException.hpp  ApixuException.h  ApixuException.hpp  api_exception.h  apixu_exception.h
include/Apixu/Http/: Http.h  http.h
include/Apixu/Response/: Condition.h  Condition.hpp  Current.h  Current.hpp  CurrentCondition.h  CurrentCondition.hpp  CurrentWeather.h  CurrentWeather.hpp  Error.h  Error.hpp  Location.h  Location.hpp  WeatherHistory.h  WeatherHistory.hpp  condition.h  current.h  current_condition.h  current_weather.h  error.h  location.h  weather_history.h
include/Apixu/Response/Forecast/: Astro.h  Astro.hpp  Day.h  Day.hpp  ForecastDay.h  ForecastDay.hpp  ForecastWeather.h  ForecastWeather.hpp  Hour.h  Hour.hpp  WeatherForecast.h  WeatherForecast.hpp  astro.h  day.h  forecast_day.h  forecast_weather.h  hour.h  weather_forecast.h
include/apixu/: apixu.h  time.h
include/apixu/response/: current.h  location.h
include/apixu/response/forecast/: weather_forecast.h
src/: Apixu.cpp  Apixu.h  Apixu.hpp  Time.cpp  Time.h  Time.hpp  apixu.cpp  time.cpp
src/Exception/: ApiException.cpp  ApixuException.cpp
src/HTTP/: HTTP.cpp  HTTP.h  HTTP.hpp
src/Http/: Exception.cpp  Http.cpp  Http.hpp  exception.cpp  http.cpp
src/Response/: Condition.cpp  Condition.hpp  Current.cpp  CurrentCondition.cpp  CurrentCondition.hpp  CurrentWeather.cpp  CurrentWeather.hpp  Error.cpp  Error.hpp  History.cpp  History.hpp  Location.cpp  WeatherHistory.cpp
src/Response/Forecast/: Astro.cpp  Astro.hpp  Day.cpp  Forecast.cpp  Forecast.hpp  ForecastDay.cpp  ForecastDay.hpp  ForecastWeather.cpp  Hour.cpp  WeatherForecast.cpp  WeatherForecast.hpp
test/: main.cpp
tests/: ApixuConditionsTest.cpp  ApixuCurrentTest.cpp  ApixuForecastTest.cpp  ApixuHistoryTest.cpp  ApixuSearchTest.cpp  CMakeLists.txt  HttpClientMock.cpp  apixu_conditions_test.cpp  apixu_current_test.cpp  apixu_forecast_test.cpp  apixu_history_test.cpp  apixu_search_test.cpp  apixu_test.cpp  http_client_mock.cpp
